CNAME 설정 스크립트

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
           git config --global user.email "email@example.com"
           git config --global user.name "${{ github.actor }}"
 
+      - name: Set Canonical Name for Custom Domain
+        run: echo leobang.me > ./build/CNAME
+
       - name: Install Dependencies
         run: npm ci
 
